--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+.container div {
+  margin-bottom: 9rem;
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
